testdata/baselines/reference/submodule/conformance/importTag23.errors.txt
/b.js(2,4): error TS8006: 'import type' declarations can only be used in TypeScript files.
/b.js(5,18): error TS8005: 'implements' clauses can only be used in TypeScript files.
/b.js(6,14): error TS2420: Class 'C' incorrectly implements interface 'I'.
  Property 'foo' is missing in type 'C' but required in type 'I'.


==== /a.ts (0 errors) ====
    export interface I {
        foo(): void;
    }
    
==== /b.js (3 errors) ====
    /**
     * @import * as NS from './a'
       ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8006: 'import type' declarations can only be used in TypeScript files.
     */
    
    /** @implements {NS.I} */
                     ~~~~
!!! error TS8005: 'implements' clauses can only be used in TypeScript files.
    export class C {}
                 ~
!!! error TS2420: Class 'C' incorrectly implements interface 'I'.
!!! error TS2420:   Property 'foo' is missing in type 'C' but required in type 'I'.
!!! related TS2728 /a.ts:2:5: 'foo' is declared here.
    